# JinChanXianFu

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  stop.sh
database/: schema.sql
docs/: design.md  progress.md
docs/assets/: screenshot.png.placeholder
resources/prompts/: base.md  chart_analysis.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/workspace/: MEMORY.md  SOUL.md
src-tauri/resources/workspace/skills/_always/: market-query.md  watchlist.md
src-tauri/resources/workspace/skills/on-demand/: agent-plan.md  alert-manager.md  kline-analysis.md  limit-stocks.md  lobby-manager.md  scheduled-task.md  sector-rotation.md  self-upgrade.md  stock-analysis.md  tdx-indicator.md  trade-journal.md  web-browser.md
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: alert.rs  browser.rs  capture.rs  database.rs  http_proxy.rs  indicator.rs  market_data.rs  mod.rs  watchlist.rs  workspace.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs
src-tauri/src/services/: kline.rs  market.rs  mod.rs  scheduler.rs
src-tauri/src/services/tdx/: evaluator.rs  mod.rs  parser.rs  tokenizer.rs
src/components/: GoldenParticles.tsx  Sidebar.tsx  SidebarParticles.tsx  XianFuHall.tsx
src/components/browser/: BrowserPanel.tsx
src/hooks/: useAI.ts  useAgent.ts
src/services/: settingsStorage.ts
src/stores/: browserStore.ts  chatStore.ts  settingsStore.ts
src/types/: agent.ts  ai.ts  capture.ts  chat.ts  knowledge.ts  market.ts
(+21 files in other folders)
